Deploy user activation
