# src/controllers/auth.controller.ts
@@ -22,7 +22,31 @@ const registerValidateSchema = Yup.object({
     fullName: Yup.string().required(),
     username: Yup.string().required(),
     email: Yup.string().email().required(),
-    password: Yup.string().required(),
+    password: Yup.string()
+        .required()
+        .min(6, "Password must be at least 6 characters")
+        .test(
+            "at-least-one-uppercase-letter",
+            "Contains at least one uppercase letter",
+            (value) => {
+                if (!value) return false;
+
+                const regex = /^(?=.*[A-Z])/;
+
+                return regex.test(value);
+            }
+        )
+        .test(
+            "at-least-one-number-letter",
+            "Contains at least one number letter",
+            (value) => {
+                if (!value) return false;
+
+                const regex = /^(?=.*\d)/;
+
+                return regex.test(value);
+            }
+        ),
     confirmPassword: Yup.string()
         .required()
         .oneOf([Yup.ref("password"), ""], "Passwords must match"),
@@ -68,12 +92,12 @@ export default {
 
     async login(req: Request, res: Response) {
         /** 
-            #swagger.tags = ['Auth']
-            #swagger.requestBody = {
-                required: true,
-                schema: { $ref: "#/components/schemas/loginRequest" },
-            };
-            */
+                                #swagger.tags = ['Auth']
+                                #swagger.requestBody = {
+                                    required: true,
+                                    schema: { $ref: "#/components/schemas/loginRequest" },
+                                };
+                                */
 
         const { identifier, password } = req.body as unknown as TLogin;
 
@@ -88,6 +112,7 @@ export default {
                         username: identifier,
                     },
                 ],
+                isActive: true,
             });
 
             if (!userByIdentifier) {
@@ -128,13 +153,13 @@ export default {
 
     async me(req: IReqUser, res: Response) {
         /** 
-        #swagger.tags = ['Auth']
-        #swagger.security = [
-            {
-                bearerAuth: [],
-            },
-        ];
-        */
+                            #swagger.tags = ['Auth']
+                            #swagger.security = [
+                                {
+                                    bearerAuth: [],
+                                },
+                            ];
+                            */
 
         try {
             const user = req.user;
@@ -149,6 +174,43 @@ export default {
             const err = error as unknown as Error;
             res.status(400).json({
                 message: err.message,
+                data: null,
+            });
+        }
+    },
+
+    async activation(req: Request, res: Response) {
+        /**
+        #swagger.tags = ['Auth']
+        #swagger.requestBody = {
+            required: true,
+            schema: {$ref: "#/components/schemas/activationRequest"},
+        }
+        */
+
+        try {
+            const { code } = req.body as { code: string };
+
+            const user = await UserModel.findOneAndUpdate(
+                {
+                    activationCode: code,
+                },
+                {
+                    isActive: true,
+                },
+                {
+                    new: true,
+                }
+            );
+
+            res.status(200).json({
+                message: "Account successfully activated",
+                data: user,
+            });
+        } catch (error) {
+            const err = error as unknown as Error;
+            res.status(400).json({
+                meessage: err.message,
                 data: null,
             });
         }
